doc: 更新說明文件